feat(collector): 完成 jd 接入的网络隔离与日志面打通
- fix: oliver006/redis_exporter 没有 SERVICE_NAME 这个 flag，靠环境变量上报
  instance_name 是无效的，导致 Redis 指标全空；两个 Exporter job 统一改用
  prometheus 的 relabel_configs 写入该标签

- fix: 文档改为要求 prom_instance 留空，否则 monitor.buildSelector 会改用
  instance 标签而忽略 instance_name，导致查不到数据

- feat: 新增 deploy/compose.jd-link.yml，nightjar 后端加入 internal 专用网络
  jd-nightjar；跨栈只开放 Prometheus 查询、TCP 探测、日志接收三个端点，
  jd 的 frontend / grafana / backend 出网链路对 nightjar 不可见

- feat: 新增日志上报资产 log-shipper.sh、Dockerfile.logagent、agent.yaml
  （Agent 只连 internal 网络，curl 必须在构建期装好）

- feat: .env.example 补充 JD_NIGHTJAR_NETWORK 与 MWOPS_PROMETHEUS_BASE_URL

- chore: 同步 jd 侧 Exporter 资产——Exporter 只入数据面、 mysqld-exporter 口令
  改由 DATA_SOURCE_NAME 注入、my.cnf 降为特殊字符口令的备选方案

- docs: 重写 COLLECTOR-JD.md，补充网络隔离拓扑、源码级契约、验证清单与排查表